syntax = "proto3";

package proto;

service k8sResource {
    rpc GetK8sResource(K8sResourceRequest) returns (K8sResourceResponse) {}
}
message K8sResourceRequest {
    string project_id = 1;
    string company_id = 2;
    string token = 3;
    string command = 4;
    repeated string args = 5;
}
message K8sResourceResponse {
    bytes resource = 1;
    string error = 2;
}